# FreeCAD

./: CMakeLists.txt  Displacement_contrains  Element_Fem  NodeSet_fixed_contrains  Node_Loads  Nodes_SetsLoads  Planerotation_contrains  manifest.json
src/App/: Application.cpp  CMakeLists.txt  FreeCADInit.py
src/Base/: Quantity.cpp  Quantity.h  QuantityLexer.c  QuantityParser.l  Unit.cpp  Unit.h  UnitsSchemaCentimeters.cpp  UnitsSchemaInternal.cpp  UnitsSchemaMKS.cpp
src/Gui/: DlgUnitsCalculatorImp.cpp  GuiApplicationNativeEventAware.cpp  GuiApplicationNativeEventAware.cpp.orig  View3DInventorViewer.cpp
src/Mod/: CMakeLists.txt
src/Mod/Cfd/: CMakeLists.txt  CfdCaseWriterFoam.py  CfdMeshGmsh.py  CfdResult.py  CfdResultFoamVTK.py  CfdRunnableFoam.py  CfdSolverFoam.py  CfdTools.py  FluidMaterial.py  Init.py  InitGui.py  Readme.md  _CommandCfdAnalysis.py  _CommandCfdFluidMaterial.py  _CommandCfdMeshGmshFromShape.py  _CommandCfdSolverFoam.py  _FluidMaterial.py  _TaskPanelCfdMeshGmsh.py  _TaskPanelCfdResult.py  _TaskPanelCfdSolverControl.py  _TaskPanelFluidMaterial.py  _ViewProvideCfdFluidMaterial.py  _ViewProviderCfdFluidMaterial.py  _ViewProviderCfdMeshGmsh.py  _ViewProviderCfdResult.py  _ViewProviderCfdSolverFoam.py
src/Mod/Cfd/FoamCaseBuilder/: BasicBuilder.py  ThermalBuilder.py  utility.py
src/Mod/Cfd/defaults/simpleFoam/system/: fvSolution
src/Mod/Fem/: CMakeLists.txt  CMakeLists.txt.orig  FemAnalysis.py  FemCommands.py  FemFluidSection.py  FemGmshTools.py  FemInputWriter.py  FemInputWriterCcx.py  FemMeshTools.py  FemPrescribedDisplacement.py  FemTools.py  FemToolsCcx.py  FemToolsZ88.py  Init.py  InitGui.py  ObjectsFem.py  TaskPanelFemFluidSection.ui  TaskPanelFemMaterial.ui  TaskPanelFemSolverCalculix.ui  TaskPanelMechanicalMaterial.ui  TaskPanelShowDisplacement.ui  TestFem.py  _CommandFemPrescribedDisplacement.py  _CommandFluidSection.py  _CommandResultColourbar.py  _CommandRunSolver.py  _CommandShowResult.py  _FemFluidSection.py  _FemMaterial.py  _FemPrescribedDisplacement.py  _FemSolverCalculix.py  _TaskPanelFemFluidSection.py  _TaskPanelFemMaterial.py  _TaskPanelFemPrescribedDisplacement.py  _TaskPanelFemSolverCalculix.py  _TaskPanelMechanicalMaterial.py  _TaskPanelResultControl.py  (+10 more)
(+143 files in other folders)
